# maze-moving

./: CHANGELOG.md  README.md  cabal.project  moving-maze.cabal
app/: Main.hs  Maze.hs
