cabal-version:      2.4
name:               moving-maze
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lyndon Maydwell
maintainer:         lyndon@sordina.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable moving-maze
    main-is:       Main.hs
    other-modules: Maze

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        gloss,
        gloss-raster,
        mtl,
        containers,
        lens,
        mwc-random
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded -O2 -fno-liberate-case -funfolding-use-threshold1000 -funfolding-keeness-factor1000 -optlo-O3 "-with-rtsopts=-N -T"
